remove the "Contributors" list and re-arrange the "Help" info (#4044)
1. Make "Help" Info in verticle in ul...li style.
2. remove the contributors' list, this will be discussed at (https://github.com/nodejs/nodejs.org/issues/4043).
3. Ref from "README.md" in "CONTRIBUTING.md", because for newbies, they should know how to step-by-step building the nodejs.org.
4. Considering the random contributor is related to node/node.dev (https://nodejs.dev/, at the footer) instead of node.org itself, so remove it here.

Ref: https://github.com/nodejs/nodejs.org/issues/4000
----
Co-authored-by: Rich Trott <rtrott@gmail.com>

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -10,6 +10,7 @@
   "reportNodeIssue": "报告 Node.js 问题 ",
   "reportWebsiteIssue": "报告网站问题",
   "getHelpIssue": "获取帮助",
+  "Contributing": "为 Nodejs.org 做贡献",
   "by": "by",
   "all-downloads": "所有下载选项",
   "nightly": "每日构建",
