--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -10,6 +10,7 @@
   "reportNodeIssue": "Report Node.js issue",
   "reportWebsiteIssue": "Report website issue",
   "getHelpIssue": "Get Help",
+  "Contributing": "Contributing For Nodejs.org",
   "by": "by",
   "all-downloads": "All download options",
   "nightly": "Nightly builds",
