--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -162,10 +162,10 @@
   },
   "banners": {
     "index": {
-      "startDate": "2021-08-05T13:00:00.000Z",
-      "endDate": "2021-08-25T13:00:00.000Z",
-      "text": "New security releases now available for 16.x, 14.x, and 12.x release lines",
-      "link": "blog/vulnerability/aug-2021-security-releases/"
+      "startDate": "2021-08-25T16:00:00.000Z",
+      "endDate": "2021-09-08T16:00:00.000Z",
+      "text": "New security releases to be made available August 31th, 2021",
+      "link": "blog/vulnerability/aug-2021-security-releases2/"
     },
     "blacklivesmatter": {
       "visible": false,
