--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -162,7 +162,7 @@
   },
   "banners": {
     "index": {
-      "text": "对 16.x，14.x 和 12.x 的安全更新版本已发布"
+      "text": "新安全更新将于 2021 年 8 月 31 日发布"
     }
   }
 }
