--- a/locale/ar/site.json
+++ b/locale/ar/site.json
@@ -88,7 +88,7 @@
       "text": "تثبيت Node.js باستعمال أرشيف ثنائي على لينكس"
     },
     "install-on-wsl": {
-      "text": "التثبيت على ويندوز النظام الفرعي لينكس (WSL)"
+      "text": "التثبيت على ويندوز في النظام الفرعي لينكس (WSL)"
     }
   },
   "docs": {
