add aug 31 2021 security release post announcement (#4082)

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -164,7 +164,7 @@
     "index": {
       "startDate": "2021-08-25T16:00:00.000Z",
       "endDate": "2021-09-08T16:00:00.000Z",
-      "text": "New security releases to be made available August 31th, 2021",
+      "text": "New security releases now available for 14.x, and 12.x release lines",
       "link": "blog/vulnerability/aug-2021-security-releases2/"
     },
     "blacklivesmatter": {
