zh-CN: aug 31 2021 security release post announcement (#4085)
Ref : https://github.com/nodejs/nodejs.org/pull/4082

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -162,7 +162,7 @@
   },
   "banners": {
     "index": {
-      "text": "新安全更新将于 2021 年 8 月 31 日发布"
+      "text": "针对 14.x 和 12.x 的安全更新补丁已可用"
     }
   }
 }
