[Arabic] aug 31 2021 security release post announcement (#4086)
add aug 31 2021 security release post announcement

* Remove `startDate` & `endDate` & `link`

Co-authored-by: Maledong <maledong_public@foxmail.com>

Co-authored-by: Maledong <maledong_public@foxmail.com>

--- a/locale/ar/site.json
+++ b/locale/ar/site.json
@@ -163,10 +163,7 @@
   },
   "banners": {
     "index": {
-      "startDate": "2021-08-25T16:00:00.000Z",
-      "endDate": "2021-09-08T16:00:00.000Z",
-      "text": "ستتوفر الإصدارات الأمنية الجديدة في 31 أوت 2021",
-      "link": "blog/vulnerability/aug-2021-security-releases2/"
+      "text": "إصدارات الأمانة الجديدة متوفرة الآن لإصدارات 14.x و 12.x."
     },
     "blacklivesmatter": {
       "visible": false,
