--- a/locale/en/blog/release/v16.7.0.md
+++ b/locale/en/blog/release/v16.7.0.md
@@ -147,7 +147,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v16.7.0/node-v16.7.0-linux-s3
 AIX 64-bit Binary: https://nodejs.org/dist/v16.7.0/node-v16.7.0-aix-ppc64.tar.gz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v16.7.0/node-v16.7.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v16.7.0/node-v16.7.0-linux-arm64.tar.xz<br>
-Source Code: *Coming soon*<br>
+Source Code: https://nodejs.org/dist/v16.7.0/node-v16.7.0.tar.gz<br>
 Other release files: https://nodejs.org/dist/v16.7.0/<br>
 Documentation: https://nodejs.org/docs/v16.7.0/api/
 
