--- a/locale/en/blog/release/v6.12.3.md
+++ b/locale/en/blog/release/v6.12.3.md
@@ -145,7 +145,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v6.12.3/node-v6.12.3-linux-s3
 AIX 64-bit Binary: https://nodejs.org/dist/v6.12.3/node-v6.12.3-aix-ppc64.tar.gz<br>
 SmartOS 32-bit Binary: https://nodejs.org/dist/v6.12.3/node-v6.12.3-sunos-x86.tar.xz<br>
 SmartOS 64-bit Binary: https://nodejs.org/dist/v6.12.3/node-v6.12.3-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v6.12.3/node-v6.12.3-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v6.12.3/node-v6.12.3-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v6.12.3/node-v6.12.3-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v6.12.3/node-v6.12.3.tar.gz<br>
