--- a/locale/en/blog/release/v8.1.1.md
+++ b/locale/en/blog/release/v8.1.1.md
@@ -100,8 +100,8 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v8.1.1/node-v8.1.1-linux-s390
 AIX 64-bit Binary: https://nodejs.org/dist/v8.1.1/node-v8.1.1-aix-ppc64.tar.gz<br>
 SmartOS 32-bit Binary: https://nodejs.org/dist/v8.1.1/node-v8.1.1-sunos-x86.tar.xz<br>
 SmartOS 64-bit Binary: https://nodejs.org/dist/v8.1.1/node-v8.1.1-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
-ARMv7 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v8.1.1/node-v8.1.1-linux-armv6l.tar.xz<br>
+ARMv7 32-bit Binary: https://nodejs.org/dist/v8.1.1/node-v8.1.1-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v8.1.1/node-v8.1.1-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v8.1.1/node-v8.1.1.tar.gz<br>
 Other release files: https://nodejs.org/dist/v8.1.1/<br>
