--- a/locale/en/blog/release/v9.11.0.md
+++ b/locale/en/blog/release/v9.11.0.md
@@ -118,7 +118,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v9.11.0/node-v9.11.0-linux-s3
 AIX 64-bit Binary: https://nodejs.org/dist/v9.11.0/node-v9.11.0-aix-ppc64.tar.gz<br>
 SmartOS 32-bit Binary: https://nodejs.org/dist/v9.11.0/node-v9.11.0-sunos-x86.tar.xz<br>
 SmartOS 64-bit Binary: https://nodejs.org/dist/v9.11.0/node-v9.11.0-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v9.11.0/node-v9.11.0-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v9.11.0/node-v9.11.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v9.11.0/node-v9.11.0-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v9.11.0/node-v9.11.0.tar.gz<br>
