zh-CN: Add new translation for security release (#4150)
Ref: https://github.com/nodejs/nodejs.org/pull/4149.

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -162,7 +162,7 @@
   },
   "banners": {
     "index": {
-      "text": "针对 14.x 和 12.x 的安全更新补丁已可用"
+      "text": "新安全更新补丁将于 2021 年 10 月 12 日发布"
     }
   }
 }
