add new translations for "Toggle Button" (#4158)
For dark mode's toggle button, add the translation for it.
Ref: #4139.

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -17,6 +17,7 @@
   "unofficial-builds": "Unofficial builds",
   "previous": "Previous",
   "next": "Next",
+  "toggleText":"Toggle dark/light mode",
   "feeds": [
     {
       "link": "feed/blog.xml",
