--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -165,7 +165,7 @@
     "index": {
       "startDate": "2021-10-05T16:00:00.000Z",
       "endDate": "2021-11-05T16:00:00.000Z",
-      "text": "New security releases to be made available October 12th, 2021",
+      "text": "New security releases now available October 12th, 2021",
       "link": "blog/vulnerability/oct-2021-security-releases/"
     },
     "blacklivesmatter": {
