zh-CN: new SP on 12th Oct, 2021 (#4182)
Translation for the new SP on 12th Oct, 2021.
Ref: #4176

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -163,7 +163,7 @@
   },
   "banners": {
     "index": {
-      "text": "新安全更新补丁将于 2021 年 10 月 12 日发布"
+      "text": "新安全更新补丁已于 2021 年 10 月 12 日发布"
     }
   }
 }
