fix: remove outdated security policy, add link
Remove outdated security policy page. Replace all links to it with a
link to the equivalent information in the core repository (where it was
recently updated) so that we aren't duplicating the information in
multiple places, inevitably resulting in contradictory information when
only one place is updated.

Refs: https://github.com/nodejs/security-wg/issues/775

--- a/locale/de/site.json
+++ b/locale/de/site.json
@@ -113,7 +113,7 @@
     }
   },
   "security": {
-    "link": "security",
+    "link": "https://github.com/nodejs/node/blob/HEAD/SECURITY.md#security",
     "text": "Sicherheit"
   },
   "blog": {
