--- a/locale/fa/site.json
+++ b/locale/fa/site.json
@@ -131,7 +131,7 @@
     }
   },
   "security": {
-    "link": "security",
+    "link": "https://github.com/nodejs/node/blob/HEAD/SECURITY.md#security",
     "text": "امنیت"
   },
   "blog": {
