--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -141,7 +141,7 @@
     }
   },
   "security": {
-    "link": "security",
+    "link": "https://github.com/nodejs/node/blob/HEAD/SECURITY.md#security",
     "text": "Security"
   },
   "getcertified": {
