--- a/locale/gl/site.json
+++ b/locale/gl/site.json
@@ -116,7 +116,7 @@
     }
   },
   "security": {
-    "link": "security",
+    "link": "https://github.com/nodejs/node/blob/HEAD/SECURITY.md#security",
     "text": "Seguridade"
   },
   "blog": {
