--- a/locale/ru/site.json
+++ b/locale/ru/site.json
@@ -135,7 +135,7 @@
     }
   },
   "security": {
-    "link": "security",
+    "link": "https://github.com/nodejs/node/blob/HEAD/SECURITY.md#security",
     "text": "Безопасность"
   },
   "blog": {
