--- a/locale/uk/site.json
+++ b/locale/uk/site.json
@@ -130,7 +130,7 @@
     }
   },
   "security": {
-    "link": "security",
+    "link": "https://github.com/nodejs/node/blob/HEAD/SECURITY.md#security",
     "text": "Безпека"
   },
   "blog": {
