--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -163,7 +163,7 @@
   },
   "banners": {
     "index": {
-      "text": "新安全更新补丁已于 2021 年 10 月 12 日发布"
+      "text": "12 月 6 日全天 Node.js 训练与考试认证折扣优惠"
     }
   }
 }
