chore: Turn on ESLint for markdown (#4287)
Co-authored-by: XhmikosR <xhmikosr@gmail.com>

--- a/locale/en/blog/release/v12.17.0.md
+++ b/locale/en/blog/release/v12.17.0.md
@@ -62,16 +62,18 @@ function logWithId(msg) {
 }
 
 let idSeq = 0;
-http.createServer((req, res) => {
-  asyncLocalStorage.run(idSeq++, () => {
-    logWithId('start');
-    // Imagine any chain of async operations here.
-    setImmediate(() => {
-      logWithId('finish');
-      res.end();
+http
+  .createServer((req, res) => {
+    asyncLocalStorage.run(idSeq++, () => {
+      logWithId('start');
+      // Imagine any chain of async operations here.
+      setImmediate(() => {
+        logWithId('finish');
+        res.end();
+      });
     });
-  });
-}).listen(8080);
+  })
+  .listen(8080);
 ```
 
 In this example, the `logWithId` function will always know what the current
