--- a/locale/en/blog/release/v15.1.0.md
+++ b/locale/en/blog/release/v15.1.0.md
@@ -24,7 +24,7 @@ MySQL.prototype.query = function query(queryString, values, callback) {
   // Broadcast query information whenever a query is made
   channel.publish({
     query: queryString,
-    host: this.hostname,
+    host: this.hostname
   });
 
   this.doQuery(queryString, values, callback);
