--- a/locale/en/blog/release/v8.0.0.md
+++ b/locale/en/blog/release/v8.0.0.md
@@ -153,8 +153,12 @@ const util = require('util');
 const readfile = util.promisify(fs.readFile);
 
 readfile('/some/file')
-  .then((data) => { /** ... **/ })
-  .catch((err) => { /** ... **/ });
+  .then((data) => {
+    /** ... **/
+  })
+  .catch((err) => {
+    /** ... **/
+  });
 ```
 
 ### Console changes
@@ -183,7 +187,7 @@ Codes are manifest to the user in two ways:
 For instance, calling `assert(false)` will generate the following
 `AssertionError`:
 
-```js
+```shell
 > assert(false)
 AssertionError [ERR_ASSERTION]: false == true
     at repl:1:1
@@ -240,7 +244,9 @@ const session = new inspector.Session();
 session.connect();
 
 // Listen for inspector events
-session.on('inspectorNotification', (message) => { /** ... **/ });
+session.on('inspectorNotification', (message) => {
+  /** ... **/
+});
 
 // Send messages to the inspector
 session.post(message);
