zh-CN：security release translation (#4363)
Ref: https://github.com/nodejs/nodejs.org/pull/4362

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -163,7 +163,7 @@
   },
   "banners": {
     "index": {
-      "text": "12 月 6 日全天 Node.js 训练与考试认证折扣优惠"
+      "text": "针对 Node.js 12、14、16 和 17 各版本的安全补丁现已发布"
     }
   }
 }
