--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -164,8 +164,8 @@
   "banners": {
     "index": {
       "startDate": "2022-03-14T12:00:00.000Z",
-      "endDate": "2022-03-28T12:00:00.000Z",
-      "text": "OpenSSL security releases may require Node.js security releases",
+      "endDate": "2022-03-24T12:00:00.000Z",
+      "text": "New security releases available",
       "link": "https://nodejs.org/en/blog/vulnerability/mar-2022-security-releases/"
     },
     "blacklivesmatter": {
