zh-CN: Translation for Banner (#4505)
Ref: #4502

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -163,7 +163,7 @@
   },
   "banners": {
     "index": {
-      "text": "关于 OpenSSL 安全更新：须在 Node.js 安全补丁之后发布"
+      "text": "OpenSSL 安全更新已可用"
     }
   }
 }
