--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -163,10 +163,10 @@
   },
   "banners": {
     "index": {
-      "startDate": "2022-03-14T12:00:00.000Z",
-      "endDate": "2022-03-24T12:00:00.000Z",
-      "text": "New security releases available",
-      "link": "https://nodejs.org/en/blog/vulnerability/mar-2022-security-releases/"
+      "startDate": "2022-04-19T15:45:00.000Z",
+      "endDate": "2022-04-26T16:00:00.000Z",
+      "text": "Node.js 18 is now available!",
+      "link": "https://nodejs.org/en/blog/announcements/v18-release-announce"
     },
     "blacklivesmatter": {
       "visible": false,
