zh-CN: update site.json (#4592)
Ref: https://github.com/nodejs/nodejs.org/pull/4589

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -159,7 +159,7 @@
   },
   "banners": {
     "index": {
-      "text": "Node.js 18 现已可用！"
+      "text": "Node.js 对 2022 年五月三日 OpenSSL 安全发布的评估"
     }
   }
 }
