--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -159,10 +159,10 @@
   },
   "banners": {
     "index": {
-      "startDate": "2022-05-05T17:00:00.000Z",
-      "endDate": "2022-05-19T16:00:00.000Z",
-      "text": "Node.js assessment of OpenSSL 3 May 2022 security releases",
-      "link": "https://nodejs.org/en/blog/vulnerability/openssl-fixes-in-regular-releases-may2022"
+      "startDate": "2022-06-08T16:00:00.000Z",
+      "endDate": "2022-06-22T16:00:00.000Z",
+      "text": "Changing the End-of-Life Date for Node.js 16 to September 11th, 2023",
+      "link": "https://nodejs.org/en/blog/announcements/nodejs16-eol"
     },
     "blacklivesmatter": {
       "visible": false,
