zh-CN: Trans for site.json (#4650)
Refs: https://github.com/nodejs/nodejs.org/pull/4629

Co-authored-by: Maledong <maledong_github@outlook.com>

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -159,7 +159,7 @@
   },
   "banners": {
     "index": {
-      "text": "Node.js 对 2022 年五月三日 OpenSSL 安全发布的评估"
+      "text": "Node.js 16 版本终止服务日期已变更延长至 2023 年 9 月 11 日"
     }
   }
 }
