zh-CN: update site.json (#4671)
Refs: https://github.com/nodejs/nodejs.org/pull/4669

Co-authored-by: Maledong <maledong_github@outlook.com>

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -159,7 +159,7 @@
   },
   "banners": {
     "index": {
-      "text": "Node.js 16 版本终止服务日期已变更延长至 2023 年 9 月 11 日"
+      "text": "Node.js 2022 年 6 月 21 日发布的安全补丁中对 OpenSSL 风险影响的判定"
     }
   }
 }
