zh-CN：Translation for site.json
Refs: https://github.com/nodejs/nodejs.org/pull/4683

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -159,7 +159,7 @@
   },
   "banners": {
     "index": {
-      "text": "Node.js 2022 年 6 月 21 日发布的安全补丁中对 OpenSSL 风险影响的判定"
+      "text": "新安全补丁将于 2022 年 7 月 5 日 发布"
     }
   }
 }
