--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -161,7 +161,7 @@
     "index": {
       "startDate": "2022-06-27T16:00:00.000Z",
       "endDate": "2022-07-13T16:00:00.000Z",
-      "text": "New security releases to be made available July 5th, 2022",
+      "text": "New security releases now available for Node.js 14, 16, and 18 release lines",
       "link": "https://nodejs.org/en/blog/vulnerability/july-2022-security-releases/"
     },
     "blacklivesmatter": {
