zh-CN: Translation for release announcements in 'site.json' (#4712)
Refs: https://github.com/nodejs/nodejs.org/pull/4704.

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -159,7 +159,7 @@
   },
   "banners": {
     "index": {
-      "text": "新安全补丁将于 2022 年 7 月 5 日 发布"
+      "text": "Node.js 14，16 和 18 版本的安全补丁已发布"
     }
   }
 }
