refer people to release repo for release schedule (#4821)
Do not duplicate the release schedule and information on the site.
Refer people to the release repo so they can see the most
up-to-date and canonical information.

--- a/locale/en/blog/release/v6.17.1.md
+++ b/locale/en/blog/release/v6.17.1.md
@@ -8,7 +8,7 @@ layout: blog-post.hbs
 author: Bethany Nicolle Griggs
 ---
 
-Node 6 is due to go End-of-Life on 2019-04-30 - see [Release Schedule](https://nodejs.org/en/about/releases/).
+Node 6 is due to go End-of-Life on 2019-04-30 - see [Release Schedule](https://github.com/nodejs/release#release-schedule).
 
 ### Notable Changes
 
