Revert "refer people to release repo for release schedule (#4821)" (#4828)
This reverts commit d63d20644c41c825173d43b3e2eb124f9a5c9c2b.

--- a/locale/ar/site.json
+++ b/locale/ar/site.json
@@ -41,6 +41,10 @@
     "governance": {
       "link": "about/governance",
       "text": "الحوكمة"
+    },
+    "releases": {
+      "link": "about/releases",
+      "text": "الاصدارات"
     }
   },
   "download": {
