--- a/locale/es/site.json
+++ b/locale/es/site.json
@@ -38,6 +38,10 @@
     "governance": {
       "link": "about/governance",
       "text": "Dirección"
+    },
+    "releases": {
+      "link": "about/releases",
+      "text": "Versiones"
     }
   },
   "download": {
