--- a/locale/it/site.json
+++ b/locale/it/site.json
@@ -37,6 +37,10 @@
     "governance": {
       "link": "about/governance",
       "text": "Gestione"
+    },
+    "releases": {
+      "link": "about/releases",
+      "text": "Rilasci"
     }
   },
   "download": {
