--- a/locale/ja/site.json
+++ b/locale/ja/site.json
@@ -39,6 +39,10 @@
     "governance": {
       "link": "about/governance",
       "text": "委員会"
+    },
+    "releases": {
+      "link": "about/releases",
+      "text": "リリース"
     }
   },
   "download": {
