--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -41,6 +41,10 @@
     "governance": {
       "link": "about/governance",
       "text": "管理规则"
+    },
+    "releases": {
+      "link": "about/releases",
+      "text": "发布"
     }
   },
   "download": {
