--- a/locale/de/site.json
+++ b/locale/de/site.json
@@ -38,6 +38,10 @@
     "governance": {
       "link": "about/governance",
       "text": "Governance"
+    },
+    "releases": {
+      "link": "about/releases",
+      "text": "Versionen"
     }
   },
   "download": {
