--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -41,6 +41,10 @@
     "governance": {
       "link": "about/governance",
       "text": "Governance"
+    },
+    "releases": {
+      "link": "about/releases",
+      "text": "Releases"
     }
   },
   "download": {
