--- a/locale/gl/site.json
+++ b/locale/gl/site.json
@@ -37,6 +37,10 @@
     "governance": {
       "link": "about/governance",
       "text": "Goberno"
+    },
+    "releases": {
+      "link": "about/releases",
+      "text": "Versións"
     }
   },
   "download": {
