--- a/locale/zh-tw/site.json
+++ b/locale/zh-tw/site.json
@@ -39,6 +39,10 @@
     "governance": {
       "link": "about/governance",
       "text": "管理規則"
+    },
+    "releases": {
+      "link": "about/releases",
+      "text": "發佈版"
     }
   },
   "download": {
