--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -137,7 +137,7 @@
     "index": {
       "startDate": "2022-09-15T16:00:00.000Z",
       "endDate": "2022-09-22T16:00:00.000Z",
-      "text": "New security releases to be made available September 22nd, 2022",
+      "text": "New security releases to be made available September 23rd, 2022",
       "link": "https://nodejs.org/en/blog/vulnerability/september-2022-security-releases/"
     },
     "blacklivesmatter": {
